--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 		font-size: 20px;
 		display: flex;
 		justify-content: center;
+		height: 50px;
 	}
 	nav a
 	{
 		color:black;
-		padding-right: 15px;
 		text-decoration:  none;
-
-
+		font-size: 25px;
+		font-weight: bold;
 	}
 	nav a:hover
 	{
