--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <style>
 	body {
-		background-image: url("images/biaa.png");
+		background-image: url("Images/biaa.png");
 		background-repeat: no-repeat;
 		background-attachment: fixed;
 		background-size: 100% 100%;
@@ -47,7 +47,7 @@
 	}
 	header
 	{
-		background-image: url("images/br.jpg");
+		background-image: url("Images/br.jpg");
 		background-repeat: no-repeat;
 		background-size: 100% 100%;
 		width: 700px;
